--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
-    "DefaultConnection": "" 
-  } 
+  "connectionStrings": {
+    "ConnectionString": "It's a secret"
+  }
 }
