--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,5 +7,6 @@
   "AllowedHosts": "*",
   "connectionStrings": {
     "ConnectionString": "It's a secret"
-  }
+  },
+  "TokenString" :  "Heheh du finder aldrig ud af det"
 }
