--- a/DesktopClient/App.config
+++ b/DesktopClient/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key="WebApiPath" value="https://localhost:44310/api/"/>
+  </appSettings>
 </configuration>
