--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Controls\ImageButton.cs" />
     <Compile Include="Controls\TextBox.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
+    <Compile Include="Converters\MultiBoolConverterBinding.cs" />
+    <Compile Include="Converters\MultiStringConverterBinding.cs" />
     <Compile Include="Helpers\WatermarkAdorner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
