--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +51,7 @@
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ImageUtility.cs" />
     <Compile Include="Utils\JsonUtility.cs" />
     <Compile Include="Utils\StringUtility.cs" />
     <Compile Include="Models\User.cs" />
