Nu billede i item

--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Controls\ImageButton.cs" />
+    <Compile Include="Converters\ByteArrayToImageSourceConverter.cs" />
+    <Compile Include="Converters\MultiImageBindingConverter.cs" />
     <Compile Include="Converters\StringToVisibilityConverter.cs" />
     <Compile Include="Helpers\PasswordBoxHelper.cs" />
     <Compile Include="Controls\TextBox.cs" />
