--- a/DesktopClient/DesktopClient.csproj
+++ b/DesktopClient/DesktopClient.csproj
@@ -86,7 +86,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ApplicationInfo.cs" />
+    <Compile Include="Events\IEventPublisher.cs" />
     <Compile Include="Helpers\CommandHandler.cs" />
+    <Compile Include="Events\EventPublisher.cs" />
     <Compile Include="Helpers\IHavePassword.cs" />
     <Compile Include="Helpers\PasswordHelper.cs" />
     <Compile Include="Service.cs" />
